--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Do you love me?</h2>
+        <h2 class="question">Anh ăn cơm không?</h2>
         <img class="gif" alt="gif" src="https://media0.giphy.com/media/t8Lo2mPAzOcmVTgtGe/giphy.gif?cid=6c09b952231uyrnduhdsf4wqnxz03rv9wx3ni5sm0zolrxz3&ep=v1_stickers_related&rid=giphy.gif&ct=s"/>
         <div class="btn-group">
-            <button class="yes-btn">Yes</button>
-            <button class="no-btn">No</button>
+            <button class="NO-btn">NO</button>
+            <button class="Yes-btn">Yes</button>
         </div>
     </div>
     <script src="script.js"></script>
